<resources>
    <string name="app_name">Rachel</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="nav_menu_item_home">Home</string>
    <string name="nav_menu_item_wardrobe">Wardrobe</string>
    <string name="nav_menu_item_settings">Settings</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="filter_tshirt">Shirts</string>
    <string name="filter_pants">Pants</string>
    <string name="filter_underwear">Underwear</string>
    <string name="filter_accessories">Accessories</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ma_bt_add_event">Add Event</string>
    <string name="ma_bt_add_clothes">Add Clothes</string>
    <string name="login_et_email">Email</string>
    <string name="login_et_password">Password</string>
    <string name="login_bt_login">Login</string>

    <string name="email_error">Type your email</string>
    <string name="password_error">Type your password</string>
    <string name="auth_email_error">Check your email</string>
    <string name="auth_password_error">Check your password</string>
    <string name="login_successful">You were logged in successfully</string>

    <string name="description_addclothes_iv_picture">Add a picture</string>
    <string name="addclothes_tv_name">Add a name(optional)</string>
    <string name="addclothes_et_name">Eg. Red T-Shirt</string>
    <string name="addclothes_tv_type">Type</string>
    <string name="add">Add</string>

    <string name="alert_image_title">Continue without image?</string>
    <string name="alert_image_message">Without an image, it\'s harder to recognize your clothes. Do you want to proceed anyway?</string>
    <string name="alert_image_positive_button">Add without image</string>
    <string name="add_an_image">Add an image</string>
    <string name="cancel">Cancel</string>
    <string name="alert_choose_title">Upload image from</string>
    <string name="alert_choose_message">Do you want to upload your image from Camera or Gallery?</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>

    <string name="shirt">Shirt</string>
    <string name="pants">Pants</string>
    <string name="underwear">Underwear</string>
    <string name="accessories">Acessories</string>

    <string name="select_a_type">Select a type</string>
    <string name="cloth_added_success">Cloth added with success!</string>
    <string name="select_picture">Select Picture</string>

    <string name="alert_delete_title">Delete this item?</string>
    <string name="alert_delete_message">Are you sure you want to delete this item?</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="permission_camera_denied">You cannot take pictures without this permissions.</string>
    <string name="permission_permanently_denied">We noticed that some permission may have been permanently denied. Please go to your setting and grant the permission.</string>
    <string name="login_bt_anon">Anonymous Login</string>
    <string name="authentication_failed">Authentication failed</string>
    <string name="setting_bt_logoff">Sign off</string>

    <string name="anonymous">Anonymous</string>
</resources>
