<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AddClothes"
    tools:layout_editor_absoluteY="81dp">

    <ImageView
        android:id="@+id/addclothes_iv_picture"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:contentDescription="@string/description_addclothes_iv_picture"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/addclothes_et_name"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@mipmap/empty_camera" />

    <TextView
        android:id="@+id/addclothes_tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/addclothes_tv_name"
        app:layout_constraintBottom_toTopOf="@+id/addclothes_et_name"
        app:layout_constraintStart_toStartOf="@+id/addclothes_et_name" />

    <EditText
        android:id="@+id/addclothes_et_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:ems="10"
        android:hint="@string/addclothes_et_name"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="@+id/addclothes_iv_picture"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/addclothes_iv_picture" />

    <TextView
        android:id="@+id/addclothes_tv_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/addclothes_tv_type"
        app:layout_constraintStart_toStartOf="@+id/addclothes_iv_picture"
        app:layout_constraintTop_toBottomOf="@+id/addclothes_iv_picture" />


    <Button
        android:id="@+id/addclothes_bt_add"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="8dp"
        android:text="@string/add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.75" />

    <android.support.v7.widget.CardView
        android:id="@+id/addclothes_cv_types"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addclothes_tv_type"
        app:layout_constraintVertical_bias="0.0">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:background="@color/white">

            <Button
                android:id="@+id/addclothes_bt_shirt"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@drawable/ic_shirt_96px"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintEnd_toStartOf="@+id/addclothes_bt_pants"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/addclothes_bt_pants"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:background="@drawable/ic_pants_96px"
                app:layout_constraintBottom_toBottomOf="@+id/addclothes_bt_shirt"
                app:layout_constraintDimensionRatio="w,1:1"
                app:layout_constraintEnd_toStartOf="@+id/addclothes_bt_underwear"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/addclothes_bt_shirt"
                app:layout_constraintTop_toTopOf="@+id/addclothes_bt_shirt" />

            <Button
                android:id="@+id/addclothes_bt_underwear"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:background="@drawable/ic_underwear_96px"
                app:layout_constraintBottom_toBottomOf="@+id/addclothes_bt_pants"
                app:layout_constraintDimensionRatio="w,1:1"
                app:layout_constraintEnd_toStartOf="@+id/addclothes_bt_accessories"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/addclothes_bt_pants"
                app:layout_constraintTop_toTopOf="@+id/addclothes_bt_pants" />

            <Button
                android:id="@+id/addclothes_bt_accessories"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:background="@drawable/ic_accessories_96px"
                app:layout_constraintBottom_toBottomOf="@+id/addclothes_bt_underwear"
                app:layout_constraintDimensionRatio="w,1:1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/addclothes_bt_underwear"
                app:layout_constraintTop_toTopOf="@+id/addclothes_bt_underwear" />
        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>